--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "airbnb-base",
     "plugin:jest-formatting/strict",
     "plugin:jest/recommended",
-    "plugin:jest/style"
+    "plugin:jest/style",
+    "plugin:prettier/recommended"
   ],
   "plugins": [
     "@typescript-eslint",
