--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jambff/client",
+  "name": "@jambff/openapi-client",
   "version": "1.0.0",
   "author": "Alex Mendes",
   "license": "MIT",
@@ -55,15 +55,18 @@
     "commitlint": "^8.3.5",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "esm": "^3.2.25",
     "husky": "^4.2.5",
     "jest": "^29.0.0",
     "jsonwebtoken": "^8.5.1",
     "openapi-types": "^11.0.0",
+    "prettier": "^2.8.1",
     "semantic-release": "^19.0.5",
     "ts-jest": "^29.0.0",
     "typescript": "^4.6.4"
