--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@jambff/openapi-client",
+  "name": "@jambff/oac",
+  "description": "A JavaScript OpenAPI client generator.",
   "version": "1.0.0",
   "author": "Alex Mendes",
   "license": "MIT",
@@ -9,13 +10,10 @@
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx,.json .",
     "test": "jest",
-    "build:cjs": "tsc --module commonjs --outDir dist",
-    "build:esm": "tsc --module esnext --outDir dist/esm",
-    "build": "yarn build:cjs && yarn build:esm",
     "prebuild": "node ./builder/version.js",
     "prepublishOnly": "node ./builder/version.js",
     "typecheck": "tsc --noEmit",
-    "generate": "node ./builder/index.js"
+    "oac": "node ./builder/index.js"
   },
   "sideEffects": false,
   "bin": {
@@ -23,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:jambff/openapi-client.git"
+    "url": "git@github.com:jambff/oac.git"
   },
   "publishConfig": {
     "access": "public",
@@ -36,14 +34,22 @@
   },
   "files": [
     "src",
-    "dist"
+    "bin"
   ],
   "dependencies": {
     "axios": "^0.27.2",
+    "fs-extra": "^11.1.0",
     "jwt-decode": "^3.1.2",
+    "handlebars": "^4.7.7",
+    "openapi-types": "^11.0.0",
     "openapi-typescript": "^4.0.0",
+    "pascal-case": "^3.1.2",
     "qs": "^6.10.3",
+    "typeconv": "^1.7.0",
     "yargs": "^17.6.2"
+  },
+  "peerDependencies": {
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^8.3.4",
@@ -61,18 +67,12 @@
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "esm": "^3.2.25",
-    "fs-extra": "^11.1.0",
-    "handlebars": "^4.7.7",
     "husky": "^4.2.5",
     "jest": "^29.0.0",
     "jsonwebtoken": "^8.5.1",
-    "openapi-types": "^11.0.0",
-    "pascal-case": "^3.1.2",
     "prettier": "^2.8.1",
     "semantic-release": "^19.0.5",
     "ts-jest": "^29.0.0",
-    "typeconv": "^1.7.0",
     "typescript": "^4.6.4"
   }
 }
