--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
+      - name: Install
+        run: yarn install --frozen-lockfile --non-interactive
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_GITHUB_TOKEN }}
