--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^11.1.0",
     "handlebars": "^4.7.7",
     "jwt-decode": "^3.1.2",
+    "node-fetch": "^2.6.1",
     "openapi-types": "^11.0.0",
     "openapi-typescript": "^4.0.0",
     "pascal-case": "^3.1.2",
