fix: unresolved import

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,13 @@
   "globals": {
     "PromiseFulfilledResult": "readonly"
   },
+  "settings": {
+    "import/parsers": { "@typescript-eslint/parser": [".ts", ".tsx"] },
+    "import/resolver": { "typescript": {} }
+  },
   "rules": {
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
-    "import/no-unresolved": "off",
     "import/extensions": "off",
     "global-require": "off",
     "import/no-dynamic-require": "off",
