--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx,.json .",
     "test": "jest",
     "typecheck": "tsc --noEmit",
-    "oac": "node ./builder/index.js"
+    "oac": "node ./bin/index.js"
   },
   "sideEffects": false,
   "bin": {
-    "oac": "node ./builder/index.js"
+    "oac": "node ./bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "@types/qs": "^6.9.7",
     "app-root-path": "^3.1.0",
     "axios": "^0.27.2",
+    "chalk": "^4.1.2",
     "fs-extra": "^11.1.0",
     "handlebars": "^4.7.7",
     "jwt-decode": "^3.1.2",
