--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "app-root-path": "^3.1.0",
     "axios": "^0.27.2",
     "chalk": "^4.1.2",
+    "fast-glob": "^3.2.11",
     "fs-extra": "^11.1.0",
     "handlebars": "^4.7.7",
     "jwt-decode": "^3.1.2",
